fix header overlaps

--- a/reddit-stylish.css
+++ b/reddit-stylish.css
@@ -174,3 +174,12 @@ li.link-save-button.save-button.login-required {
 }
 
 
+#header-bottom-right {
+    margin-top: 33px;
+}
+
+#header {
+    height: 80px;
+}
+
+
